# nerf

./: .flyteignore  .gitignore  Justfile  pyproject.toml  requirements.txt  scratchpad.ipynb  yt_scratch.ipynb
docs/: README.md
nerf/: library.py
nerf/core/: callbacks.py  data.py  model.py  structs.py  utils.py
nerf/orchestration/: constants.py  environments.py  images.py  library.py
nerf/tasks/: __init__.py  animate.py  fit.py  gridsearch.py  label.py  params.py  plot.py  test.py
nerf/workflows/: random.py  train.py
tests/unit/core/: test_data.py  test_utils.py
