[tool.poetry]
name = "nerf"
version = "0.1.0"
description = ""
authors = ["granthamtaylor <granthamtaylor@icloud.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
torch = "^2.3.1"
tensordict = "^0.4.0"
lightning = "^2.2.5"
pydantic = "^2.7.3"
numpy = "<2.0.0"
polars = "^1.5.0"
union = "^0.1.57"
flytekit = "^1.13.4"
uv = "^0.2.32"
pyarrow = "^17.0.0"
plotly = "^5.23.0"
flytekitplugins-deck-standard = "^1.13.4"
flytekitplugins-envd = "^1.13.4"
pillow = "^10.4.0"
scikit-image = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
