[project]
name = "nerf"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "faker>=30.3.0",
    "ffmpeg>=1.4",
    "flytekit==1.13.7",
    "flytekitplugins-deck-standard>=1.13.5",
    "flytekitplugins-envd>=1.13.5",
    "lightning>=2.4.0",
    "moviepy>=1.0.3",
    "numpy<2.0",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "plotly>=5.24.1",
    "polars>=1.8.2",
    "pyarrow>=17.0.0",
    "pydantic>=2.9.2",
    "tensordict>=0.5.0",
    "torch>=2.4.1",
    "union>=0.1.70",
    "wandb>=0.18.3",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
